Fix form on mobile

--- a/static/sass/imports/_main.scss
+++ b/static/sass/imports/_main.scss
@@ -32,6 +32,10 @@
       font-size: max(15vw, 1.2em);
       line-height: 1;
     }
+
+    h3 {
+      font-size: min(10vw, 2em);
+    }
   }
 }
 
